--- a/best-moments.html
+++ b/best-moments.html
@@ -46,6 +46,10 @@
     </main>
     <footer>
         <p>&copy; 2023 Brazilian Team FanPage Website. All rights reserved.</p>
+        <p>Final Project-Brazilian football fan Page THIS IS NOT AN OFFICIAL WEBSITE.</p>
+        <p>JUST FOR EDUCATIONAL PURPOSES ONLY </p>
+        <p>ALL THE INFORMATION GATHERED FROM SEARCHING </p>
+        <p>ALL THE COMING FIXTURES ARE RANDOMLY CREATED</p>
     </footer>
     <script src="script.js"></script>
 </body>
